--- a/aspnet_tutorial/Views/Categories/Create.cshtml
+++ b/aspnet_tutorial/Views/Categories/Create.cshtml
@@ -20,8 +20,8 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                         <label>Category name</label>
-                                @Html.EditorFor(model => model.cat_name, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.cat_name, "", new { @class = "text-danger" })
+                                @Html.EditorFor(model => model.category_name, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.category_name, "", new { @class = "text-danger" })
                         </div>
                         <button type="submit" class="btn btn-primary">Create</button>
                         <button type="submit" class="btn btn-default">Reset</button>
