--- a/aspnet_tutorial/Views/Categories/Delete.cshtml
+++ b/aspnet_tutorial/Views/Categories/Delete.cshtml
@@ -17,7 +17,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.cat_name)
+            @Html.DisplayFor(model => model.category_name)
         </dd>
 
     </dl>
