--- a/aspnet_tutorial/Views/Products/Delete.cshtml
+++ b/aspnet_tutorial/Views/Products/Delete.cshtml
@@ -17,7 +17,7 @@
                 </dt>
 
                 <dd>
-                    @Html.DisplayFor(model => model.category.cat_name)
+                    @Html.DisplayFor(model => model.category.category_name)
                 </dd>
 
                 <dt>
