--- a/aspnet_tutorial/Views/Orders/Edit.cshtml
+++ b/aspnet_tutorial/Views/Orders/Edit.cshtml
@@ -20,18 +20,18 @@
                 <h4>order</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.order_id)
+                @Html.HiddenFor(model => model.id)
 
                 <div class="form-group">
                     <label> Customer name :</label>
-                    @Html.DropDownList("fk_customer_id", null, htmlAttributes: new {@class = "form-control"})
-                    @Html.ValidationMessageFor(model => model.fk_customer_id, "", new {@class = "text-danger"})
+                    @Html.DropDownList("customer_id", null, htmlAttributes: new {@class = "form-control"})
+                    @Html.ValidationMessageFor(model => model.customer_id, "", new {@class = "text-danger"})
                 </div>
 
                 <div class="form-group">
                     <label>Product name :</label>
-                    @Html.DropDownList("fk_product_id", null, htmlAttributes: new {@class = "form-control"})
-                    @Html.ValidationMessageFor(model => model.fk_product_id, "", new {@class = "text-danger"})
+                    @Html.DropDownList("product_id", null, htmlAttributes: new {@class = "form-control"})
+                    @Html.ValidationMessageFor(model => model.product_id, "", new {@class = "text-danger"})
                 </div>
 
                 <div class="form-group">
