--- a/aspnet_tutorial/Views/Orders/Create.cshtml
+++ b/aspnet_tutorial/Views/Orders/Create.cshtml
@@ -26,6 +26,11 @@
                         </div>
 
                         <div class="form-group">
+                            <label> Category name :</label>
+                            @Html.DropDownList("id", null, htmlAttributes: new { @class= "form-control"})
+                        </div>
+
+                        <div class="form-group">
                             <label>Product name :</label>
                             @Html.DropDownList("product_id", null, htmlAttributes: new {@class = "form-control"})
                             @Html.ValidationMessageFor(model => model.product_id, "", new {@class = "text-danger"})
