--- a/aspnet_tutorial/Views/Orders/Create.cshtml
+++ b/aspnet_tutorial/Views/Orders/Create.cshtml
@@ -21,18 +21,18 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             <label> Customer name :</label>
-                            @Html.DropDownList("customer_id", null, htmlAttributes: new {@class = "form-control"})
+                            @Html.DropDownList("customer_id", null, "Select a customer", htmlAttributes: new {@class = "form-control"})
                             @Html.ValidationMessageFor(model => model.customer_id, "", new {@class = "text-danger"})
                         </div>
 
                         <div class="form-group">
                             <label> Category name :</label>
-                            @Html.DropDownList("id", null, htmlAttributes: new { @class= "form-control"})
+                            @Html.DropDownList("id", null, "Select a category", htmlAttributes: new { @class= "form-control"})
                         </div>
 
                         <div class="form-group">
                             <label>Product name :</label>
-                            @Html.DropDownList("product_id", null, htmlAttributes: new {@class = "form-control"})
+                            @Html.DropDownList("product_id", null, "Select a product", htmlAttributes: new {@class = "form-control"})
                             @Html.ValidationMessageFor(model => model.product_id, "", new {@class = "text-danger"})
                         </div>
 
