--- a/aspnet_tutorial/Views/Templates/Default/default_layout.cshtml
+++ b/aspnet_tutorial/Views/Templates/Default/default_layout.cshtml
@@ -15,6 +15,8 @@
         </div><!--/.row-->
     </div>	<!--/.main-->
     @Scripts.Render("~/Assets/js")
+    @Scripts.Render("~/bundles/jquery")
+    @RenderSection("scripts", required:false)
     <script>
         !function ($) {
             $(document).on("click", "ul.nav li.parent > a > span.icon", function () {
