--- a/aspnet_tutorial/Views/Users/Login.cshtml
+++ b/aspnet_tutorial/Views/Users/Login.cshtml
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
         <div class="login-panel panel panel-default">
-            <div class="panel-heading">ASP.NET TUTORIAL | SIMPLE STORE MANAGEMENT </div>
+            <div class="panel-heading">ASP.NET TUTORIAL | AUTHENTIFICATION </div>
             <div class="panel-body">
                 @using (Html.BeginForm())
                 {
