--- a/aspnet_tutorial/Views/Orders/Create.cshtml
+++ b/aspnet_tutorial/Views/Orders/Create.cshtml
@@ -27,12 +27,12 @@
 
                         <div class="form-group">
                             <label> Category name :</label>
-                            @Html.DropDownList("id", null, "Select a category", htmlAttributes: new { @class= "form-control"})
+                            @Html.DropDownList("cat_id", null, "Select a category", htmlAttributes: new { @class= "form-control cat-id"})
                         </div>
 
                         <div class="form-group">
                             <label>Product name :</label>
-                            @Html.DropDownList("product_id", null, "Select a product", htmlAttributes: new {@class = "form-control"})
+                            @Html.DropDownList("product_id", new SelectList(new List<string>()), "Select a product", htmlAttributes: new {@class = "form-control"})
                             @Html.ValidationMessageFor(model => model.product_id, "", new {@class = "text-danger"})
                         </div>
 
