--- a/aspnet_tutorial/Views/Orders/Create.cshtml
+++ b/aspnet_tutorial/Views/Orders/Create.cshtml
@@ -35,7 +35,11 @@
                             @Html.DropDownList("product_id", new SelectList(new List<string>()), "Select a product", htmlAttributes: new {@class = "form-control"})
                             @Html.ValidationMessageFor(model => model.product_id, "", new {@class = "text-danger"})
                         </div>
-
+                        <div class="form-group">
+                            <label>Unit Price
+                            </label>
+                            <input type="text" name="unit_price" class="form-control unit-price"/>
+                        </div>
                         <div class="form-group">
                             <label>Qty</label>
                             @Html.EditorFor(model => model.qty, new {htmlAttributes = new {@class = "form-control"}})
